force-app/main/default/objects/Zendesk__Zendesk_Ticket__c.object
<CustomObject>
    <description>Custom object to store Zendesk Support tickets (mostly closed ones) on salesforce</description>
    <fields>
        <fullName>Zendesk__Agent_Wait_Time_Business__c</fullName>
        <label>Agent wait time (business)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Agent_Wait_Time_Calendar__c</fullName>
        <inlineHelpText>In miutes</inlineHelpText>
        <label>Agent wait time (calendar)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Assignee_Name__c</fullName>
        <label>Assignee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Brand__c</fullName>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Custom_Date_Only__c</fullName>
        <label>Custom Date Only</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zendesk__Custom_Field_1__c</fullName>
        <label>Custom Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Date_Time_created__c</fullName>
        <label>Date/Time created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Date_Time_initially_assigned__c</fullName>
        <label>Date/Time initially assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Date_Time_solved__c</fullName>
        <label>Date/Time solved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Date_Time_updated__c</fullName>
        <label>Date/Time updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__DomainUniqueTicketId__c</fullName>
        <label>Domain Unique Ticket Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zendesk__Group__c</fullName>
        <label>Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Hold_Time_Business__c</fullName>
        <label>Hold time (business)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Hold_Time_Calendar__c</fullName>
        <inlineHelpText>In minutes</inlineHelpText>
        <label>Hold time (calendar)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Lead_Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester (Lead)</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Zendesk Support Tickets</relationshipLabel>
        <relationshipName>Zendesk_Support_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zendesk__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Zendesk Tickets</relationshipLabel>
        <relationshipName>Zendesk_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zendesk__Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Zendesk Tickets</relationshipLabel>
        <relationshipName>Zendesk_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zendesk__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-</fullName>
                    <default>true</default>
                    <label>-</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zendesk__Reply_Time_Business__c</fullName>
        <label>Reply time (business)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Reply_Time_Calendar__c</fullName>
        <inlineHelpText>In minutes</inlineHelpText>
        <label>Reply time (calendar)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__RequesterEmailAddress__c</fullName>
        <description>When Accounts/Contacts are not created through the creation of a Ticket from Zendesk, this field will be populated.</description>
        <label>Requester Email Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__RequesterName__c</fullName>
        <description>When Accounts/Contacts are not created through the creation of a Ticket from Zendesk Support, this field will be populated.</description>
        <label>Requester Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__RequesterOrganization__c</fullName>
        <description>When Accounts/Contacts are not created through the creation of a ticket from Zendesk Support, this field will be populated.</description>
        <label>Organization</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Requester_Wait_Time_Business__c</fullName>
        <label>Requester wait time (business)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Requester_Wait_Time_Calendar__c</fullName>
        <label>Requester wait time (calendar)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Zendesk Tickets</relationshipLabel>
        <relationshipName>Zendesk_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zendesk__Resolution_time_business__c</fullName>
        <label>Resolution time (business)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Resolution_time_calendar__c</fullName>
        <inlineHelpText>In minutes</inlineHelpText>
        <label>Resolution time (calendar)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>On-hold</fullName>
                </value>
                <value>
                    <fullName>Solved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zendesk__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Test_field_2__c</fullName>
        <label>Test field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Ticket_Form_Id__c</fullName>
        <label>Ticket Form Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Ticket_Form_Name__c</fullName>
        <label>Ticket Form Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Ticket_ID__c</fullName>
        <description>Stores Zendesk Support Ticket Id</description>
        <externalId>true</externalId>
        <label>Ticket ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Ticket_Origin__c</fullName>
        <label>Ticket Origin</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zendesk__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-</fullName>
                    <default>true</default>
                    <label>-</label>
                </value>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>Incident</fullName>
                </value>
                <value>
                    <fullName>Problem</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zendesk__ZendeskDomain__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The domain to which the ticket belongs to. Used when multiple domains are enabled for the organization</description>
        <label>Zendesk Domain</label>
        <referenceTo>Zendesk__Zendesk_Domain__c</referenceTo>
        <relationshipLabel>Zendesk Support Tickets</relationshipLabel>
        <relationshipName>Zendesk_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Zendesk Support Ticket</label>
    <listViews>
        <fullName>Zendesk__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Zendesk__Description__c</columns>
        <columns>Zendesk__Requester__c</columns>
        <columns>Zendesk__ZendeskDomain__c</columns>
        <columns>Zendesk__Organization__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Zendesk Support Ticket</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zendesk Support Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>